--- a/KingsPhone/app.css
+++ b/KingsPhone/app.css
@@ -22,20 +22,30 @@ form {
 }
 
 h4 {
+    color: black;
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: left;
 }
 
 span {
+    color: black;
     display: flex;
     align-items: center;
     justify-content: right;
 }
 
 li {
+    display: inline-block;
+    height: 100px;
+    width: 500px;
+    
     background-color: rgb(221, 221, 221);
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 0.3em;
     padding: 0.3em;
+}
+
+ul {
+    text-align: right;
 }
