--- a/KingsPhone/app.css
+++ b/KingsPhone/app.css
@@ -15,9 +15,11 @@ header {
     border-radius: 0.5em;
 }
 
-form {
-    border: 1px solid whitesmoke;
-    border-radius: 0.3em;
+h3 {
+    color: white;
+    background-color: rgb(94, 0, 148);
+    border: 1px solid rgba(172, 172, 172, 0);
+    border-radius: 0.5em;
     padding: 0.3em;
 }
 
@@ -26,6 +28,15 @@ h4 {
     display: flex;
     align-items: center;
     justify-content: left;
+}
+
+h2 {
+    color: black;
+    text-align: center;
+    background-color: rgb(185, 185, 185);
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 0.3em;
+    padding: 0.3em;
 }
 
 li {
